Merge pull request #54 from Reyunityone/feature/readme
creato readme per istruzioni (#55)

* Creata classe utente e sottoclasse Diabetologo, modificato login controller e interfaccia di login (#5)

* Feature/rilevazione (#6)

* Sistemata rilevazione come da uml

* Modificati campi da string a tipi di dati più rigidi

* Sistemate altre finestre/classi come da uml (#7)

* Feature/cambio a paziente (#8)

* Uniformato il progetto con classe user e paziente

* refactoring User e Paziente

* Sistemati warning del compilatore e aggiornato a javafx 26 (#9)

* Aggiunta data di fine, vari refactor suggeriti da intellij (#10)

* Aggiunti controlli in farmacocontroller e combobox funzionante (#11)

* lievi modifiche grafiche  (#12)

* lievi modifiche grafiche

* Assegnare più terapie per paziente e cronologia terapie inserite

* Aggiunto momento della rilevazione al modello (#14)

* Visualizzazione andamento glicemia (#15)

* Aggiunta password a User, aggiornamento variabile per classi figlie (#16)

* Aggiunta password a User, aggiornamento variabile per classi figlie

* Migliorata creazione/modifica credenziali e dati dei profili di Paziente e Medico (#17)

* Migliorata creazione/modifica credenziali e dati dei profili di Paziente e Medico

* Aggiornato LoginController per gestione credenziali

* Feature/database (#19)

* Creato database, procedo a refactoring del codice

* Permanenza dati paziente completata

# Conflicts:
#	src/main/java/application/controller/RilevazioneController.java

* rebase, risolti merge conflict

# Conflicts:
#	src/main/java/application/classiGeneriche/Diabetologo.java
#	src/main/java/application/classiGeneriche/Paziente.java
#	src/main/java/application/classiGeneriche/User.java
#	src/main/java/application/controller/LoginController.java

# Conflicts:
#	src/main/java/application/controller/RilevazioneController.java

* risolti altri conflitti con nuove pr

* impostati unit test, cortesia di claude (un lavoraccio da fare a mano) (#21)

* Fix storico te